# supramark

./: .eslintrc.js  .gitignore  ARCHITECTURE.md  CHANGE.md  CLAUDE.md  Cargo.toml  FEATURES.md  FEATURES.zh.md  PROGRESS.zh.md  README.md  README.zh.md  REUSE.toml  SPEC.md  deny.toml  example.vison.json  jest-environment.cjs  jest.preset.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  verify.sh
crates/code-highlight/: Cargo.toml
crates/code-highlight/src/: lib.rs
crates/d2-little/: Cargo.toml
crates/d2-little/examples/: measure.rs  measure_test.rs  ruler_test.rs
crates/d2-little/src/: lib.rs  semantic.rs
crates/d2-little/src/textmeasure/: d2_emulation_metrics.rs  d2_go_emulation.rs  d2_host_metrics.rs  host_callback.rs  markdown.rs  mod.rs
crates/d2-little/tests/: phase_probe.rs
crates/font-metrics/: Cargo.toml
crates/font-metrics/src/: host_callback.rs  lib.rs  ttf_parser.rs
crates/font-metrics/src/static_dejavu/: mod.rs
crates/graphviz-anywhere/capi/: CMakeLists.txt  graphviz_api.c
crates/graphviz-anywhere/examples/rust/: Cargo.toml
crates/graphviz-anywhere/examples/rust/src/: main.rs
crates/mermaid-little/: Cargo.toml
crates/mermaid-little/src/: engine.rs  font_metrics.rs  lib.rs  semantic.rs
crates/mermaid-little/src/model/: class.rs  er.rs  flowchart.rs  mod.rs  sequence.rs
crates/mermaid-little/tests/: gen_svg.rs
crates/plantuml-little/: .gitignore  Cargo.toml  FEATURES.md  FEATURES.zh.md  LICENSE  README.md  README.zh.md
crates/plantuml-little/.github/ISSUE_TEMPLATE/: bug_report.yml
crates/plantuml-little/.github/workflows/: ci.yml  regenerate-refs.yml  release.yml
crates/plantuml-little/examples/: dump_parse.rs  dump_preproc.rs  dump_svg.rs
crates/plantuml-little/scripts/: check_reference_failures.sh  wasm-dot-wrapper.sh
crates/plantuml-little/src/: error.rs  font_data.rs  font_metrics.rs  lib.rs  main.rs  openiconic.rs  semantic.rs  text.rs
crates/plantuml-little/src/abel/: entity.rs  group_type.rs  leaf_type.rs  link.rs  mod.rs
crates/plantuml-little/src/decoration/: link_decor.rs  link_style.rs  link_type.rs  mod.rs  symbol.rs
crates/plantuml-little/src/dot/: dot_data.rs  dot_splines.rs  graphviz.rs  mod.rs  version.rs
crates/plantuml-little/src/klimt/: color.rs  drawable.rs  font.rs  geom.rs  hand.rs  mod.rs  shape.rs  svg.rs
crates/plantuml-little/src/layout/: activity.rs  board.rs  bpm.rs  chart.rs  chronology.rs  component.rs  creole_diagram.rs  ditaa.rs  ebnf.rs  erd.rs  files_diagram.rs  flow.rs  gantt.rs  git.rs  graphviz.rs  hcl.rs  json_diagram.rs  math.rs  mindmap.rs  nwdiag.rs  packet.rs  pie.rs  regex_diagram.rs  salt.rs  sequence.rs  state.rs  timing.rs  usecase.rs  wbs.rs  wire.rs
crates/plantuml-little/src/layout/sequence_teoz/: builder.rs  (+5 more)
crates/plantuml-little/src/model/: activity.rs  board.rs  bpm.rs  chart.rs  chronology.rs  component.rs  creole_diagram.rs  diagram.rs  ditaa.rs  dot.rs  ebnf.rs  entity.rs  erd.rs  files_diagram.rs  flow.rs  gantt.rs  git.rs  hcl.rs  hyperlink.rs  json_diagram.rs  link.rs  math.rs  mindmap.rs  mod.rs  nwdiag.rs  packet.rs  pie.rs  regex_diagram.rs  richtext.rs  salt.rs  sequence.rs  state.rs  timing.rs  usecase.rs  wbs.rs  wire.rs
crates/plantuml-little/src/parser/: activity.rs  board.rs  bpm.rs  chart.rs  chronology.rs  class.rs  common.rs  component.rs  creole.rs  creole_diagram.rs  ditaa.rs  dot.rs  ebnf.rs  erd.rs  files_diagram.rs  flow.rs  gantt.rs  git.rs  hcl.rs  json_diagram.rs  math.rs  mindmap.rs  mod.rs  nwdiag.rs  packet.rs  pie.rs  regex_diagram.rs  salt.rs  sequence.rs  state.rs  timing.rs  usecase.rs  wbs.rs  wire.rs  yaml.rs
crates/plantuml-little/src/preproc/: builtins.rs  expr.rs  include.rs  mod.rs
crates/plantuml-little/src/render/: embedded.rs  error_page.rs  mod.rs  svg.rs  svg_activity.rs  svg_board.rs  svg_bpm.rs  svg_chart.rs  svg_chronology.rs  svg_class.rs  svg_creole.rs  svg_ditaa.rs  svg_ebnf.rs  svg_erd.rs  svg_files.rs  svg_flow.rs  svg_gantt.rs  svg_git.rs  svg_hcl.rs  svg_hyperlink.rs  svg_json.rs  svg_math.rs  svg_meta.rs  svg_mindmap.rs  svg_nwdiag.rs  svg_packet.rs  svg_pie.rs  svg_regex.rs  svg_richtext.rs  svg_salt.rs  svg_sequence.rs  svg_sprite.rs  svg_state.rs  svg_timing.rs  svg_usecase.rs  svg_wbs.rs  svg_wire.rs
crates/plantuml-little/src/skin/: actor.rs  arrow.rs  component.rs  mod.rs  rose.rs
crates/plantuml-little/src/style/: mod.rs  pname.rs  signature.rs  skin_param.rs  sname.rs  style_def.rs  value.rs
crates/plantuml-little/src/svek/: builder.rs  cluster.rs  image.rs  mod.rs  node.rs  shape_type.rs  snake.rs  svg_result.rs
crates/plantuml-little/src/tim/: builtin.rs  expression.rs  mod.rs
crates/plantuml-little/stdlib/C4/: C4.puml  C4_Component.puml  C4_Container.puml  C4_Context.puml  C4_Deployment.puml  C4_Sequence.puml
crates/plantuml-little/tests/: generate_reference.sh  generate_test_list.py  integration.rs  klimt_verify.rs  known_failures.txt  port_abel.rs  port_atmp.rs  port_command.rs  port_decoration.rs  port_dot.rs  port_klimt.rs  port_klimt_drawing.rs  port_klimt_drawing_svg.rs  port_sequence_layout.rs  port_sequence_render.rs  port_skin.rs  port_stereo.rs  port_style.rs  port_svek.rs  port_tim.rs  reference_tests.rs  special_ext_reference_activity_split.rs  special_ext_reference_class_split.rs  special_ext_reference_seq_split.rs  special_ext_reference_state_split.rs  svek_verify.rs
crates/plantuml-little/tests/fixtures/: README.md  klimt_verify.json  svek_verify.json
crates/plantuml-little/tests/reference/: INDEX.tsv
crates/plantuml-little/tests/support/: mod.rs  svg_compare.rs  viz_wasm_dot_oneshot.mjs  viz_wasm_runner.mjs  wasm_backend.rs
crates/plantuml-little/tests/tools/: .gitignore  ExtractFontMetrics.java  ExtractGlyphPaths.java  KlimtVerify.java  SvekVerify.java
crates/plantuml-little/tools/: gen_font_data.py  measure_drift.py
crates/supramark-diagram/: Cargo.toml
crates/supramark-diagram-core/: Cargo.toml
crates/supramark-diagram-core/src/: lib.rs
crates/supramark-diagram/src/: lib.rs
crates/supramark-diagram/tests/: contract.rs
(+448 files in other folders)
