# Supramark super-monorepo · Rust workspace root.
#
# This file is the single source of truth for all Rust crates in the
# repository. Sub-tree merges (per ADR-003 in
# docs/architecture/LICENSE_COMPATIBILITY.md) bring in upstream history
# under crates/<name>/; their inner [workspace] declarations are
# replaced by membership listed below — see each
# crates/<name>/UPSTREAM.md for the rationale.
#
# Run `cargo metadata --format-version=1` from the repo root to enumerate
# all workspace members. CI runs `cargo deny check` against this graph.

[workspace]
resolver = "2"

members = [
    "crates/dagre",
    "crates/graphviz-anywhere/packages/rust",
    "crates/graphviz-anywhere/examples/rust",
    "crates/font-metrics",
    "crates/plantuml-little",
    "crates/plantuml-little/packages/web",
    "crates/plantuml-little/packages/native",
    "crates/d2-little",
    "crates/d2-little/packages/web",
    "crates/d2-little/packages/native",
    "crates/mermaid-little",
    "crates/mermaid-little/packages/web",
    "crates/mermaid-little/packages/native",
    "crates/vison/vison-core",
    "crates/code-highlight",
]

# Crates we deliberately keep outside the unified workspace:
#   - none yet. Native FFI / wasm sub-crates land in step 2+ and will be
#     added here once merged.
exclude = []

# Shared lints, edition defaults, and metadata go under
# `[workspace.package]` / `[workspace.lints]` once we have multiple
# first-party crates worth aligning. Until then, keep this minimal so
# upstream-merged crates continue to resolve their own settings.
[workspace.metadata.supramark]
plan = "docs/architecture/LICENSE_COMPATIBILITY.md"

# ── Path overrides ─────────────────────────────────────────────────────
# plantuml-little and mermaid-little declare their dependency on
# `graphviz-anywhere` against crates.io. Inside this monorepo we want
# them to consume the in-tree copy at crates/graphviz-anywhere/packages/rust
# so a single native build (links = "graphviz_api") satisfies all
# consumers. Without this patch, cargo refuses to resolve because two
# crates would both claim the same `links` key.
[patch.crates-io]
graphviz-anywhere = { path = "crates/graphviz-anywhere/packages/rust" }

# mermaid-little declares `dagre` against its upstream git repo
# (https://github.com/kookyleo/dagre-rs.git, branch = main). Inside the
# super-monorepo we want it resolved to the in-tree subtree at
# crates/dagre instead — a single dagre crate compiles into the workspace,
# and cargo-deny does not flag a git source we never end up fetching.
[patch."https://github.com/kookyleo/dagre-rs.git"]
dagre = { path = "crates/dagre" }
