[package]
name = "supramark-code-highlight"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust-backed code highlighting core for Supramark, powered by syntect and two_face."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
syntect = { version = "5.1.0" }
two-face = { version = "0.4.0", default-features = false, features = ["syntect-onig"] }

[dev-dependencies]
serde_json = "1.0"
