[package]
name = "mermaid-little"
version = "11.14.0-1"
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["kookyleo <kookyleo@gmail.com>"]
description = "Lightweight .mmd to .svg converter — byte-exact SVG parity with upstream Mermaid"
homepage = "https://github.com/kookyleo/mermaid-little"
repository = "https://github.com/kookyleo/mermaid-little"
keywords = ["mermaid", "mmd", "svg", "diagram"]
categories = ["graphics", "command-line-utilities"]
exclude = [
    "AGENTS.md",
    "PLAN.md",
    "*.log",
    "*.svg",
    "tests/",
    "scripts/",
    "docs/",
    ".claude/",
]

[[bin]]
name = "mermaid-little"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:env_logger"]
# Embed QuickJS + KaTeX for byte-exact LaTeX math rendering. Required for
# CLI / test parity with mermaid's `forceLegacyMathML: true` reference
# output. Web/RN consumers leave this off and let their host environment's
# JS engine drive KaTeX directly.
katex = ["dep:rquickjs"]
# Embed QuickJS + cytoscape + cose-bilkent for byte-exact mindmap layout.
# Mermaid's mindmap renderer drives the JS cose-bilkent extension; a pure
# Rust port of the multi-level coarsening / spring embedder is unlikely
# to be byte-exact (FP accumulation, randomisation order). The headless
# JS path is ~1.34 MB of vendored sources and a 15-LOC stub; spike at
# /tmp/spike-cytoscape confirmed the layout runs end-to-end inside
# rquickjs without DOM polyfills.
cose_bilkent = ["dep:rquickjs"]

[dependencies]
# Shared font metrics. mermaid-little still drives its main code
# path off the byte-exact static DejaVu tables (gated behind the
# `static-fixtures` feature) so the *_byte_exact.rs reference suites
# keep passing. The TtfParser / HostCallback impls in font-metrics
# will replace this once the dynamic main path lands; until then
# this dep stays on `static-fixtures`.
#
# Imported as `font_metrics_core` (via `package =`) because
# mermaid-little's own `crate::font_metrics` wrapper module would
# otherwise shadow the dep in the crate-root namespace.
font_metrics_core = { package = "font-metrics", path = "../font-metrics", version = "0.1", features = ["static-fixtures"] }
thiserror = "1"
log = "0.4"
env_logger = { version = "0.11", optional = true }
# QuickJS bindings for the optional `katex` feature. Pinned to 0.10 (last
# release compatible with rust-version = "1.82"; 0.11+ requires 1.87).
rquickjs = { version = "0.10", optional = true }
# Config / preprocess / detect pipeline (Wave 0).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `%%{init: {...}}%%` bodies are JSON-ish: unquoted keys, single quotes,
# trailing commas. JSON5 matches that tolerance.
json5 = "0.4"
# YAML frontmatter parser (JSON-schema flavoured, which is what
# upstream `js-yaml` requests via `{ schema: JSON_SCHEMA }`).
serde_yml = "0.0.12"
regex = "1"
# Hierarchical directed graph layout. Pinned to a kookyleo fork until
# dagre-rs has a published release that exposes intersectPolygon /
# intersectRect helpers required by mermaid's edge-endpoint clipping.
# Patched in supramark super-monorepo: the workspace-root [patch] block
# redirects this git source to crates/dagre. The `version = "0.1"`
# constraint is added so cargo-deny does not flag a wildcard public
# dependency. Tracked for upstream contribution in
# crates/mermaid-little/UPSTREAM.md.
dagre = { version = "0.1", git = "https://github.com/kookyleo/dagre-rs.git", branch = "main" }
# Pure-Rust port of fdlibm. Used by the venn layout to match V8's
# Math.* (acos/atan2/sqrt/sin/cos) byte-for-byte — V8 ships fdlibm too,
# so routing all venn FP through libm eliminates ULP-level drift in the
# Nelder-Mead simplex trajectory that propagates to scaled SVG coords.
libm = "0.2"

[dev-dependencies]
# SVG parser used by the structural-diff evaluator under `tests/eval/`.
roxmltree = "0.20"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
