[package]
name = "mermaid-little"
version = "11.14.0-1"
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["kookyleo <kookyleo@gmail.com>"]
description = "Lightweight .mmd to .svg converter — byte-exact SVG parity with upstream Mermaid"
homepage = "https://github.com/kookyleo/mermaid-little"
repository = "https://github.com/kookyleo/mermaid-little"
keywords = ["mermaid", "mmd", "svg", "diagram"]
categories = ["graphics", "command-line-utilities"]
exclude = [
    "AGENTS.md",
    "PLAN.md",
    "*.log",
    "*.svg",
    "tests/",
    "scripts/",
    "docs/",
    ".claude/",
]

[[bin]]
name = "mermaid-little"
path = "src/main.rs"
# `metrics-ttf-parser` is auto-selected because the CLI must ship a
# concrete metrics impl; the TtfParser impl reproduces upstream
# Mermaid output byte-for-byte (raw glyph advances from the embedded
# DejaVu Latin subset match Java's font stack on the discriminating
# italic test to sub-0.0001 px — see crates/font-metrics for the
# measurement spike) and is the safest default for a standalone tool.
required-features = ["cli", "metrics-ttf-parser"]

[features]
default = ["cli"]
cli = ["dep:env_logger"]
# Embed QuickJS + KaTeX for byte-exact LaTeX math rendering. Required for
# CLI / test parity with mermaid's `forceLegacyMathML: true` reference
# output. Web/RN consumers leave this off and let their host environment's
# JS engine drive KaTeX directly.
katex = ["dep:rquickjs"]
# Embed QuickJS + cytoscape + cose-bilkent for byte-exact mindmap layout.
# Mermaid's mindmap renderer drives the JS cose-bilkent extension; a pure
# Rust port of the multi-level coarsening / spring embedder is unlikely
# to be byte-exact (FP accumulation, randomisation order). The headless
# JS path is ~1.34 MB of vendored sources and a 15-LOC stub; spike at
# /tmp/spike-cytoscape confirmed the layout runs end-to-end inside
# rquickjs without DOM polyfills.
cose_bilkent = ["dep:rquickjs"]

# Metrics-impl selection. The metrics-* family is mutually exclusive —
# exactly one impl must be active per build. The default feature set
# above deliberately selects NONE: production consumers MUST set
# `default-features = false` and explicitly pick one of the platform
# impls below, so the choice is visible in the consumer's Cargo.toml
# rather than implicit. `cargo test` here is unblocked by a dev-dep on
# `mermaid-little` itself (see [dev-dependencies]) that flips on
# `metrics-ttf-parser` so the existing *_byte_exact.rs reference
# suites keep running unchanged.
#
# Historical note: prior to 2026-05-10 this slot was `metrics-static-
# dejavu`, gated by ~22K LOC of offline-baked Java-FontMetrics-equivalent
# range tables. A first cleanup pass replaced those with a wrapper named
# `TtfParserJavaCompatMetrics` (TtfParser + Java AWT italic-skew
# adjustment); a follow-up measurement spike then showed the italic-
# skew adjustment was based on a wrong AWT assumption (Java AWT does not
# reapply the skew on its own font path), and that raw
# `TtfParserMetrics::default_latin()` already matches Java FontMetrics
# byte-for-byte (italic `«archimate-node»` = 128.385742 px vs Java
# 128.3857 px, delta = 0.000042 px). The wrapper and its
# `metrics-java-compat` Cargo feature were therefore dropped in favour
# of `metrics-ttf-parser` below.
#
# - `metrics-ttf-parser` — runtime measurement against a ttf-parser-
#   parsed font (defaults to font-metrics's embedded DejaVu Latin
#   subset). Doubles as the byte-equal upstream-Mermaid path: the
#   embedded DejaVu subset matches Java's font stack to sub-0.0001 px
#   on the discriminating italic test, so the *_byte_exact.rs
#   reference suites pass against this impl directly. Also the
#   recommended choice for native production builds that want dynamic
#   metrics without browser/RN bridging.
# - `metrics-host-callback` — defer measurement to a JS-side bridge
#   via `wasm-bindgen` extern. Used by the `mermaid-little-web` wasm
#   wrapper so layer-1 layout sees the exact widths the host browser
#   / RN-Skia will render with.
# - `metrics-ffi-callback` — reserved for the planned React-Native
#   native-FFI wrapper that will install a JS-side bridge through an
#   `extern "C"` callback. No impl yet; enabling this feature today
#   triggers a compile_error in `src/font_metrics.rs`.
metrics-ttf-parser = []
metrics-host-callback = []
metrics-ffi-callback = []
# Semantic AST: gates the `derive(serde::Serialize)` on `src/model/*`. serde itself
# is an unconditional dependency (already used by the config/preprocess pipeline),
# so this feature is an empty set and only controls whether the model is serializable.
semantic-serde = []

[dependencies]
# Unified trait/AST envelope shared by the four engines (DiagramEngine / EngineAst / RenderOutput / DiagramError).
supramark-diagram-core = { path = "../supramark-diagram-core", version = "0.1" }
# Shared font metrics. The `metrics-*` Cargo features above pick
# which `Metrics` impl `crate::font_metrics` routes through; the
# dev-dep self-cycle below selects `metrics-ttf-parser`, which
# routes through `TtfParserMetrics::default_latin()` (raw glyph
# advances from the embedded DejaVu Latin subset). A 2026-05-10
# measurement spike confirmed the raw advances match Java
# FontMetrics byte-for-byte on the *_byte_exact.rs reference suites.
# The HostCallback impl becomes reachable when its `metrics-*` feature
# is selected instead.
#
# Imported as `font_metrics_core` (via `package =`) because
# mermaid-little's own `crate::font_metrics` wrapper module would
# otherwise shadow the dep in the crate-root namespace.
font_metrics_core = { package = "font-metrics", path = "../font-metrics", version = "0.1" }
thiserror = "1"
log = "0.4"
env_logger = { version = "0.11", optional = true }
# QuickJS bindings for the optional `katex` feature. Pinned to 0.10 (last
# release compatible with rust-version = "1.82"; 0.11+ requires 1.87).
rquickjs = { version = "0.10", optional = true }
# Config / preprocess / detect pipeline (Wave 0).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `%%{init: {...}}%%` bodies are JSON-ish: unquoted keys, single quotes,
# trailing commas. JSON5 matches that tolerance.
json5 = "0.4"
# YAML frontmatter parser (JSON-schema flavoured, which is what
# upstream `js-yaml` requests via `{ schema: JSON_SCHEMA }`).
serde_yml = "0.0.12"
regex = "1"
# Hierarchical directed graph layout. Pinned to a kookyleo fork until
# dagre-rs has a published release that exposes intersectPolygon /
# intersectRect helpers required by mermaid's edge-endpoint clipping.
# Patched in supramark super-monorepo: the workspace-root [patch] block
# redirects this git source to crates/dagre. The `version = "0.1"`
# constraint is added so cargo-deny does not flag a wildcard public
# dependency. Tracked for upstream contribution in
# crates/mermaid-little/UPSTREAM.md.
dagre = { version = "0.1", git = "https://github.com/kookyleo/dagre-rs.git", branch = "main" }
# Pure-Rust port of fdlibm. Used by the venn layout to match V8's
# Math.* (acos/atan2/sqrt/sin/cos) byte-for-byte — V8 ships fdlibm too,
# so routing all venn FP through libm eliminates ULP-level drift in the
# Nelder-Mead simplex trajectory that propagates to scaled SVG coords.
libm = "0.2"

[dev-dependencies]
# SVG parser used by the structural-diff evaluator under `tests/eval/`.
roxmltree = "0.20"
# Self-cycle so `cargo test` auto-enables `metrics-ttf-parser` —
# the *_byte_exact.rs reference suites under `tests/` require Java
# FontMetrics-compatible measurement, and a 2026-05-10 measurement
# spike confirmed `TtfParserMetrics::default_latin()` (the embedded
# DejaVu Latin subset parsed via ttf-parser) matches Java's font
# stack byte-for-byte. Production consumers explicitly opt into one
# of the `metrics-*` impls instead (see [features] above).
mermaid-little = { path = ".", features = ["metrics-ttf-parser"] }
