# Inner [workspace] removed during supramark super-monorepo merge —
# all members are now listed by the root /Cargo.toml. See UPSTREAM.md
# for the rationale and how to re-apply on upstream sync.

[package]
name = "plantuml-little"
version = "1.2026.2-3"
edition = "2021"
rust-version = "1.82"
license = "GPL-3.0-or-later OR LGPL-3.0-or-later OR Apache-2.0 OR EPL-2.0 OR MIT"
authors = ["kookyleo <kookyleo@gmail.com>"]
description = "Lightweight .puml to .svg converter — byte-exact SVG parity with Java PlantUML"
homepage = "https://github.com/kookyleo/plantuml-little"
repository = "https://github.com/kookyleo/plantuml-little"
keywords = ["plantuml", "puml", "svg", "diagram", "uml"]
categories = ["graphics", "command-line-utilities"]
exclude = [
    "AGENTS.md",
    "PLAN.md",
    "continue.md",
    "*.log",
    "*.rlib",
    "*.svg",
    "*.patch",
    "tmp_debug/",
    "tests/",
    "stdlib/",
    "fonts/",
    "docs/",
    ".trace-skill/",
    ".claude/",
    "scripts/",
    "packages/",
    "patch_java.py",
    "gen_font_data.py",
]

[[bin]]
name = "plantuml-little"
path = "src/main.rs"
# The CLI depends on std::process, env_logger, and on-disk file I/O, which
# are not available on wasm32. Compile the library only on that target.
# `metrics-ttf-parser` is auto-selected because the CLI must ship a
# concrete metrics impl; the TtfParser impl reproduces upstream Java
# FontMetrics output byte-for-byte (raw glyph advances; the embedded
# DejaVu Latin subset matches Java's font stack on the discriminating
# italic test to sub-0.0001 px — see crates/font-metrics for the
# measurement spike) and is the safest default for a standalone tool.
required-features = ["cli", "metrics-ttf-parser"]

[features]
default = ["cli", "remote"]
# Semantic AST: when on, derives serde::Serialize for model types and enables PlantumlEngine::semantic.
semantic-serde = ["dep:serde"]
# CLI front-end (env_logger + main.rs). Disabled automatically on wasm32.
cli = ["dep:env_logger"]
# Remote-resource fetching via ureq (themes, images).
# Disabled automatically on wasm32 where ureq cannot link.
remote = ["dep:ureq"]

# Metrics-impl selection. The metrics-* family is mutually exclusive —
# exactly one impl must be active per build. The default feature set
# above deliberately selects NONE: production consumers MUST set
# `default-features = false` and explicitly pick one of the platform
# impls below, so the choice is visible in the consumer's Cargo.toml
# rather than implicit. `cargo test` here is unblocked by a dev-dep on
# `plantuml-little` itself (see [dev-dependencies]) that flips on
# `metrics-ttf-parser` so the existing 268+ byte-equal-with-Java
# reference SVG suite keeps running unchanged.
#
# Historical note: prior to 2026-05-10 this slot was `metrics-static-
# dejavu`, gated by ~22K LOC of offline-baked Java-FontMetrics-equivalent
# range tables. A first cleanup pass replaced those with a wrapper named
# `TtfParserJavaCompatMetrics` (TtfParser + Java AWT italic-skew
# adjustment); a follow-up measurement spike then showed the italic-
# skew adjustment was based on a wrong assumption (Java AWT does not
# reapply the skew on its own font path), and that raw
# `TtfParserMetrics::default_latin()` already matches Java FontMetrics
# byte-for-byte (italic `«archimate-node»` = 128.385742 px vs Java
# 128.3857 px, delta = 0.000042 px). The wrapper and its
# `metrics-java-compat` Cargo feature were therefore dropped in favour
# of `metrics-ttf-parser` below.
#
# - `metrics-ttf-parser` — runtime measurement against a ttf-parser-
#   parsed font (defaults to font-metrics's embedded DejaVu Latin
#   subset). Doubles as the byte-equal-with-Java path: the embedded
#   DejaVu subset matches Java's font stack to sub-0.0001 px on the
#   discriminating italic test, so the 268+ reference SVG snapshot
#   suite passes against this impl directly. Also the recommended
#   choice for native production builds that want dynamic metrics
#   without browser/RN bridging.
# - `metrics-host-callback` — defer measurement to a JS-side bridge
#   via `wasm-bindgen` extern. Used by the `plantuml-little-web` wasm
#   wrapper so layer-1 layout sees the exact widths the host browser
#   / RN-Skia will render with.
# - `metrics-ffi-callback` — reserved for the planned React-Native
#   native-FFI wrapper that will install a JS-side bridge through an
#   `extern "C"` callback. No impl yet; enabling this feature today
#   triggers a compile_error in `src/font_metrics.rs`.
metrics-ttf-parser = []
metrics-host-callback = []
metrics-ffi-callback = []

[dependencies]
# Shared font metrics. The `metrics-*` Cargo features above pick
# which `Metrics` impl `crate::font_metrics` routes through; the
# dev-dep self-cycle below selects `metrics-ttf-parser`, which
# routes through `TtfParserMetrics::default_latin()` (raw glyph
# advances from the embedded DejaVu Latin subset). A 2026-05-10
# measurement spike confirmed the raw advances match Java
# FontMetrics byte-for-byte on the 268+ reference SVG tests. The
# HostCallback impl becomes reachable when its `metrics-*` feature
# is selected instead.
#
# Imported as `font_metrics_core` (via `package =`) because plantuml-
# little's own `crate::font_metrics` wrapper module would otherwise
# shadow the dep in the crate-root namespace.
font_metrics_core = { package = "font-metrics", path = "../font-metrics", version = "0.1" }
thiserror = "1"
log = "0.4"
env_logger = { version = "0.11", optional = true }
regex = "1"
# graphviz-anywhere — native Graphviz bindings for the non-wasm code
# path. 0.1.8+ auto-downloads the matching libgraphviz_api shared
# library from the GitHub release, so consumers (and our own CI) need
# no GRAPHVIZ_ANYWHERE_DIR / submodule / pre-installed dot. Earlier
# releases additionally fixed (a) size_t overflow in the C wrapper on
# 64-bit targets, (b) WITH_EXPAT=ON for HTML label geometry, and
# (c) g++ linkage so libstdc++ vtables resolve on Ubuntu/Debian.
graphviz-anywhere = "0.2"
libc = "0.2"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
ureq = { version = "3", optional = true }
url = "2"
# Use the pure-Rust miniz_oxide backend so the library links on wasm32
# (the zlib C backend requires a cross-compiled libz which isn't available
# on wasm32-unknown-unknown). Native builds get identical byte output.
flate2 = { version = "1", features = ["rust_backend"], default-features = false }
serde_json = "1"
# Enabled only under semantic-serde: derives Serialize for model types for semantic AST serialization.
serde = { version = "1", features = ["derive"], optional = true }
# Unified diagram engine trait / AST envelope; reverse dependency avoids cycles.
supramark-diagram-core = { path = "../supramark-diagram-core", version = "0.1" }
base64 = "0.22"

[dev-dependencies]
# Self-cycle so `cargo test` auto-enables `metrics-ttf-parser` —
# the byte-equal-with-Java reference suite under `tests/` requires
# Java FontMetrics-compatible measurement, and a 2026-05-10
# measurement spike confirmed `TtfParserMetrics::default_latin()`
# (the embedded DejaVu Latin subset parsed via ttf-parser) matches
# Java's font stack byte-for-byte. Production consumers explicitly
# opt into one of the `metrics-*` impls instead (see [features]
# above).
plantuml-little = { path = ".", features = ["metrics-ttf-parser"] }
