[package]
name = "graphviz-anywhere-example"
version = "0.1.1"
edition = "2021"
rust-version = "1.64"
license = "Apache-2.0"
authors = ["kookyleo <kookyleo@gmail.com>"]
publish = false

[dependencies]
graphviz-anywhere = { path = "../../packages/rust" }

[[bin]]
name = "graphviz-anywhere-example"
path = "src/main.rs"
test = false
